# sweep

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  release.yml
scripts/: bump.py  release_notes.py
src/: main.rs  output.rs
src/engine/: config.rs  context.rs  diagnostic.rs  fix.rs  mod.rs  rule.rs  runner.rs  source.rs  suppress.rs
src/langs/python/: imports.rs  mod.rs  stdlib.rs
src/langs/python/docstring/: markup.rs  mod.rs  parse.rs  render.rs
src/langs/python/rules/: allowed_emojis.rs  annotate_module_const.rs  casing.rs  (+18 more)
tests/: cli.rs
tests/fixtures/annotations/: expected.py  input.py
tests/fixtures/convert_and_wrap/: expected.py  input.py  sweep.toml
tests/fixtures/dict_literal/: expected.py  input.py  sweep.toml
tests/fixtures/docstring_same_line/: expected.py  input.py  sweep.toml
tests/fixtures/docstring_to_google/: expected.py  input.py  sweep.toml
tests/fixtures/docstring_to_numpy/: expected.py  input.py  sweep.toml
tests/fixtures/docstring_to_rest/: expected.py  input.py  sweep.toml
tests/fixtures/hoist/: expected.py  input.py  pyproject.toml
tests/fixtures/house_style/: expected.py  input.py  sweep.toml
tests/fixtures/line_length/: expected.py  input.py  sweep.toml
tests/fixtures/llm_noise/: expected.py  input.py  sweep.toml
tests/fixtures/markup/: expected.py  input.py  sweep.toml
tests/fixtures/no_emdash/: expected.py  input.py  sweep.toml
tests/fixtures/scoped_suppressions/: expected.py  input.py  sweep.toml
tests/fixtures/suppressions/: expected.py  sweep.toml
