[package]
name = "sweep"
version = "0.1.1"
edition = "2024"
description = "Fast, deterministic cleanup passes for pre-commit: local imports, docstring conventions, string annotations"
license = "MIT"
repository = "https://github.com/hmsgit/sweep"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
ignore = "0.4.29"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.3"
tree-sitter = "0.26.11"
tree-sitter-python = "0.25.0"

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.27.0"
